--- a/Screenshots/blog.html
+++ b/Screenshots/blog.html
@@ -28,10 +28,10 @@
            </ul>
         </div>
         <div id="mobile">
-            <a href="cart.html"></a><i class="fa-solid fa-bag-shopping"></i></a>
-            <i id="bar" class="fa-solid fa-bars"></i>
+          <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+          <i id="bar" class="fa-solid fa-bars"></i>
 
-        </div>
+      </div>
     </section>
 
     <section id="page-header" class="blog-header">
