--- a/Screenshots/shop.html
+++ b/Screenshots/shop.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/90c079449c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="Data.js" defer></script>
+    <script src="java.js" defer></script>
     <script src="shopjava.js" defer></script>
 </head>
 
@@ -28,11 +29,11 @@
                <a href="#" id="close"><i class="fa-solid fa-square-xmark"></i></a>
            </ul>
         </div>
-        <div id="mobile">
-            <a href="cart.html"></a><i class="fa-solid fa-bag-shopping"></i></a>
-            <i id="bar" class="fa-solid fa-bars"></i>
+      <div id="mobile">
+          <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+          <i id="bar" class="fa-solid fa-bars"></i>
 
-        </div>
+      </div>
     </section>
 
     <section id="page-header">
