--- a/Screenshots/sproduct.html
+++ b/Screenshots/sproduct.html
@@ -30,11 +30,11 @@
                <a href="#" id="close"><i class="fa-solid fa-square-xmark"></i></a>
            </ul>
         </div>
-        <div id="mobile">
-            <a href="cart.html"></a><i class="fa-solid fa-bag-shopping"></i></a>
-            <i id="bar" class="fa-solid fa-bars"></i>
+       <div id="mobile">
+          <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+          <i id="bar" class="fa-solid fa-bars"></i>
 
-        </div>
+      </div>
     </section>
     <section id="prodetails" class="section-p1">
       <div class="single-pro-image">
