--- a/Screenshots/sproduct.html
+++ b/Screenshots/sproduct.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" user-scalable=no content="width=device-width, initial-scale=1.0">
     <title>Tech2etc Ecommerce Tutorial</title>
     <script src="https://kit.fontawesome.com/90c079449c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
