--- a/Screenshots/contact.html
+++ b/Screenshots/contact.html
@@ -27,8 +27,8 @@
                <a href="#" id="close"><i class="fa-solid fa-square-xmark"></i></a>
            </ul>
         </div>
-        <div id="mobile">
-            <a href="cart.html"></a><i class="fa-solid fa-bag-shopping"></i></a>
+         <div id="mobile">
+            <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
             <i id="bar" class="fa-solid fa-bars"></i>
 
         </div>
